Practicas-Erick-A, CSS: logo-content: adding z-index to fix Flickity slider position

--- a/css/style.css
+++ b/css/style.css
@@ -67,6 +67,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 999;
 }
 
 .logo-content .logo-rame {
